303 transaction bug fix (#304)
* #293 Create theme sugessiton for promo page.

* #293 Create templates for promo page

* #293 Paragraph templates for promo page

* #293 Add markup files

* #293 Alter promo page paragraphs

* #293 Update config

* #293 Update language

* #293 Fix minor bugs

* #293 Update config

* #303 Get database prefix from settings.

* #303 Get database prefix from settings.

--- a/config/sync/field.storage.paragraph.field_icon.yml
+++ b/config/sync/field.storage.paragraph.field_icon.yml
@@ -10,7 +10,22 @@ field_name: field_icon
 entity_type: paragraph
 type: list_string
 settings:
-  allowed_values: {  }
+  allowed_values:
+    -
+      value: icon-clock
+      label: icon-clock
+    -
+      value: icon-calendar
+      label: icon-calendar
+    -
+      value: icon-student
+      label: icon-student
+    -
+      value: icon-pencil-case
+      label: icon-pencil-case
+    -
+      value: icon-teacher
+      label: icon-teacher
   allowed_values_function: ''
 module: options
 locked: false
