--- a/config/sync/core.entity_view_display.paragraph.icon_items_grid.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.icon_items_grid.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.field.paragraph.icon_items_grid.field_icon_item
     - field.field.paragraph.icon_items_grid.field_style
+    - field.field.paragraph.icon_items_grid.field_title
     - paragraphs.paragraphs_type.icon_items_grid
   module:
     - entity_reference_revisions
@@ -17,7 +18,7 @@ content:
   field_icon_item:
     type: entity_reference_revisions_entity_view
     weight: 1
-    label: above
+    label: hidden
     settings:
       view_mode: default
       link: ''
@@ -25,9 +26,17 @@ content:
     region: content
   field_style:
     weight: 0
-    label: above
+    label: hidden
     settings: {  }
     third_party_settings: {  }
     type: list_default
+    region: content
+  field_title:
+    weight: 2
+    label: hidden
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
     region: content
 hidden: {  }
