--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -108,6 +108,7 @@ module:
   views_infinite_scroll: 0
   views_ui: 0
   webform: 0
+  webform_attachment: 0
   webform_ui: 0
   menu_link_content: 1
   pathauto: 1
