--- a/composer.json
+++ b/composer.json
@@ -256,7 +256,9 @@
     "drupal/select_or_other": "^1.0@alpha",
     "drupal/simple_sitemap": "^3.2",
     "drupal/smart_trim": "^1.0",
-    "drupal/social_auth_facebook": "^1.0",
+    "drupal/social_api": "^2.0",
+    "drupal/social_auth": "2.0.0-beta6",
+    "drupal/social_auth_facebook": "2.0.0-beta4",
     "drupal/static_server": "^1.2",
     "drupal/statistics_counter": "1.x-dev",
     "drupal/straw": "^1.2",
