--- a/config/sync/views.view.supporter_registrants.yml
+++ b/config/sync/views.view.supporter_registrants.yml
@@ -1,13 +1,12 @@
 uuid: 9f78da86-71e7-4a98-94c4-6574d8470f2d
 langcode: en
-status: true
+status: false
 dependencies:
   config:
     - field.storage.user.field_first_name
     - field.storage.user.field_ged
     - field.storage.user.field_last_name
     - field.storage.user.field_personal_id
-    - field.storage.user.field_phone
     - field.storage.user.field_referral
   module:
     - user
@@ -222,69 +221,6 @@ display:
           group_type: group
           admin_label: ''
           label: სახელი
-          exclude: false
-          alter:
-            alter_text: false
-            text: ''
-            make_link: false
-            path: ''
-            absolute: false
-            external: false
-            replace_spaces: false
-            path_case: none
-            trim_whitespace: false
-            alt: ''
-            rel: ''
-            link_class: ''
-            prefix: ''
-            suffix: ''
-            target: ''
-            nl2br: false
-            max_length: 0
-            word_boundary: true
-            ellipsis: true
-            more_link: false
-            more_link_text: ''
-            more_link_path: ''
-            strip_tags: false
-            trim: false
-            preserve_tags: ''
-            html: false
-          element_type: ''
-          element_class: ''
-          element_label_type: ''
-          element_label_class: ''
-          element_label_colon: false
-          element_wrapper_type: ''
-          element_wrapper_class: ''
-          element_default_classes: true
-          empty: ''
-          hide_empty: false
-          empty_zero: false
-          hide_alter_empty: true
-          click_sort_column: value
-          type: string
-          settings:
-            link_to_entity: false
-          group_column: value
-          group_columns: {  }
-          group_rows: true
-          delta_limit: 0
-          delta_offset: 0
-          delta_reversed: false
-          delta_first_last: false
-          multi_type: separator
-          separator: ', '
-          field_api_classes: false
-          plugin_id: field
-        field_phone:
-          id: field_phone
-          table: user__field_phone
-          field: field_phone
-          relationship: none
-          group_type: group
-          admin_label: ''
-          label: ტელეფონი
           exclude: false
           alter:
             alter_text: false
@@ -798,7 +734,6 @@ display:
         - 'config:field.storage.user.field_ged'
         - 'config:field.storage.user.field_last_name'
         - 'config:field.storage.user.field_personal_id'
-        - 'config:field.storage.user.field_phone'
         - 'config:field.storage.user.field_referral'
   page_1:
     display_plugin: page
@@ -822,5 +757,4 @@ display:
         - 'config:field.storage.user.field_ged'
         - 'config:field.storage.user.field_last_name'
         - 'config:field.storage.user.field_personal_id'
-        - 'config:field.storage.user.field_phone'
         - 'config:field.storage.user.field_referral'
