--- a/composer.json
+++ b/composer.json
@@ -231,6 +231,7 @@
     "drupal/hierarchical_term_formatter": "^1.0@beta",
     "drupal/image_formatter_link_to_image_style": "^1.0",
     "drupal/inline_entity_form": "^1.0@beta",
+    "drupal/international_phone": "^1.0",
     "drupal/jquery_colorpicker": "^1.3",
     "drupal/linkit": "^4.3",
     "drupal/mailchimp": "^1.7",
@@ -360,6 +361,9 @@
       },
       "drupal/page_manager": {
         "Fix title change bug": "https://www.drupal.org/files/issues/2018-04-17/page_manager-page-label-not-editable-2830464-10.patch"
+      },
+      "drupal/international_phone": {
+        "change field lable": "https://www.drupal.org/files/issues/international_phone-fix_field_label-2915431-2.patch"
       }
     },
     "installer-paths": {
