--- a/config/sync/core.entity_form_display.user.user.default.yml
+++ b/config/sync/core.entity_form_display.user.user.default.yml
@@ -10,20 +10,20 @@ dependencies:
     - field.field.user.user.field_last_name
     - field.field.user.user.field_my_party_list
     - field.field.user.user.field_personal_id
-    - field.field.user.user.field_phone
     - field.field.user.user.field_politician
     - field.field.user.user.field_rank
     - field.field.user.user.field_rating_in_party_list
     - field.field.user.user.field_referral
     - field.field.user.user.field_referral_url
+    - field.field.user.user.field_tel
     - field.field.user.user.user_picture
     - image.style.avatar_image
   module:
     - datetime
     - image
+    - international_phone
     - path
     - reference_value_pair
-    - telephone
     - user
 _core:
   default_config_hash: K-1rBM8mTIkFp9RqOC2tMRUukOQ1xbRCfSKK8dEddnA
@@ -38,7 +38,7 @@ content:
     settings: {  }
     third_party_settings: {  }
   field_address:
-    weight: 12
+    weight: 11
     settings:
       size: 60
       placeholder: ''
@@ -46,7 +46,7 @@ content:
     type: string_textfield
     region: content
   field_date_of_birth:
-    weight: 11
+    weight: 10
     settings: {  }
     third_party_settings: {  }
     type: datetime_default
@@ -60,7 +60,7 @@ content:
     type: string_textfield
     region: content
   field_ged:
-    weight: 10
+    weight: 9
     settings:
       placeholder: ''
     third_party_settings: {  }
@@ -75,7 +75,7 @@ content:
     type: string_textfield
     region: content
   field_my_party_list:
-    weight: 13
+    weight: 12
     settings:
       size_er: 60
       placeholder_er: ''
@@ -93,13 +93,6 @@ content:
     third_party_settings: {  }
     type: string_textfield
     region: content
-  field_phone:
-    weight: 4
-    settings:
-      placeholder: ''
-    third_party_settings: {  }
-    type: telephone_default
-    region: content
   field_politician:
     weight: 5
     settings:
@@ -108,7 +101,7 @@ content:
     type: boolean_checkbox
     region: content
   field_rating_in_party_list:
-    weight: 14
+    weight: 13
     settings:
       placeholder: ''
     third_party_settings: {  }
@@ -124,12 +117,18 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_referral_url:
-    weight: 15
+    weight: 14
     settings:
       rows: 5
       placeholder: ''
     third_party_settings: {  }
     type: string_textarea
+    region: content
+  field_tel:
+    weight: 4
+    settings: {  }
+    third_party_settings: {  }
+    type: InternationalPhoneDefaultWidget
     region: content
   path:
     type: path
