--- a/config/sync/core.entity_view_display.user.user.minimal.yml
+++ b/config/sync/core.entity_view_display.user.user.minimal.yml
@@ -11,11 +11,12 @@ dependencies:
     - field.field.user.user.field_last_name
     - field.field.user.user.field_my_party_list
     - field.field.user.user.field_personal_id
-    - field.field.user.user.field_phone
     - field.field.user.user.field_politician
     - field.field.user.user.field_rank
     - field.field.user.user.field_rating_in_party_list
     - field.field.user.user.field_referral
+    - field.field.user.user.field_referral_url
+    - field.field.user.user.field_tel
     - field.field.user.user.user_picture
     - image.style.thumbnail
   module:
@@ -67,12 +68,12 @@ hidden:
   field_date_of_birth: true
   field_my_party_list: true
   field_personal_id: true
-  field_phone: true
   field_politician: true
   field_rank: true
   field_rating_in_party_list: true
   field_referral: true
   field_referral_url: true
+  field_tel: true
   langcode: true
   masquerade: true
   member_for: true
