--- a/config/sync/core.entity_form_display.user.user.default.yml
+++ b/config/sync/core.entity_form_display.user.user.default.yml
@@ -16,6 +16,7 @@ dependencies:
     - field.field.user.user.field_rating_in_party_list
     - field.field.user.user.field_referral
     - field.field.user.user.field_referral_url
+    - field.field.user.user.field_social_auth_password
     - field.field.user.user.user_picture
     - image.style.avatar_image
   module:
@@ -38,7 +39,7 @@ content:
     settings: {  }
     third_party_settings: {  }
   field_address:
-    weight: 12
+    weight: 11
     settings:
       size: 60
       placeholder: ''
@@ -46,7 +47,7 @@ content:
     type: string_textfield
     region: content
   field_date_of_birth:
-    weight: 11
+    weight: 10
     settings: {  }
     third_party_settings: {  }
     type: datetime_default
@@ -60,7 +61,7 @@ content:
     type: string_textfield
     region: content
   field_ged:
-    weight: 10
+    weight: 9
     settings:
       placeholder: ''
     third_party_settings: {  }
@@ -75,7 +76,7 @@ content:
     type: string_textfield
     region: content
   field_my_party_list:
-    weight: 13
+    weight: 12
     settings:
       size_er: 60
       placeholder_er: ''
@@ -108,7 +109,7 @@ content:
     type: boolean_checkbox
     region: content
   field_rating_in_party_list:
-    weight: 14
+    weight: 13
     settings:
       placeholder: ''
     third_party_settings: {  }
@@ -124,7 +125,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_referral_url:
-    weight: 15
+    weight: 14
     settings:
       rows: 5
       placeholder: ''
@@ -151,6 +152,7 @@ content:
 hidden:
   contact: true
   field_rank: true
+  field_social_auth_password: true
   google_analytics: true
   langcode: true
   language: true
