--- a/composer.json
+++ b/composer.json
@@ -354,15 +354,18 @@
         "Add route context to block": "patches/block_node_cache_contexts.patch"
       },
       "drupal/core": {
-	    "Access user emails " : "https://www.drupal.org/files/issues/2019-04-26/drupal-2799049-30-new-permission-view-user-mail.patch",
+        "Access user emails ": "https://www.drupal.org/files/issues/2019-04-26/drupal-2799049-30-new-permission-view-user-mail.patch",
         "Fix Entity reference autocomplete with fields": "https://www.drupal.org/files/issues/2019-04-16/2174633-views-273.patch",
-        "Fix ajax error in views relationships" : "https://www.drupal.org/files/issues/2019-05-04/2457999-194.patch"
+        "Fix ajax error in views relationships": "https://www.drupal.org/files/issues/2019-05-04/2457999-194.patch"
       },
       "drupal/video_embed_facebook": {
         "iframe fix": "https://www.drupal.org/files/issues/2019-05-13/facebook_embed_field.patch"
       },
       "drupal/page_manager": {
         "Fix title change bug": "https://www.drupal.org/files/issues/2018-04-17/page_manager-page-label-not-editable-2830464-10.patch"
+      },
+      "drupal/email_confirmer": {
+        "form skip": "https://www.drupal.org/files/issues/2019-04-16/email_confirmer-optionally_skip_confirmation_form-2971857-10.patch"
       }
     },
     "installer-paths": {
