#357 Update menu config.

--- a/config/sync/menu_export.export_data.yml
+++ b/config/sync/menu_export.export_data.yml
@@ -2,26 +2,29 @@
   id:
     value: '1'
   uuid:
-    value: b65a25b4-8c9c-449f-a27d-f41f81e997a0
+    value: 5e0e9ae8-e00e-460c-8ecf-49bb78a3a2ac
   revision_id:
     value: '1'
   langcode:
-    value: en
+    value: ka
   bundle:
     value: menu_link_content
   revision_created:
-    value: '1563267901'
-  revision_user: false
-  revision_log_message: false
+    value: '1560945206'
+  revision_user:
+    target_id: '0'
+  revision_log_message:
+    value: ''
   enabled:
     value: '1'
   title:
-    value: 'Change password'
-  description: false
+    value: 'Update views count'
+  description:
+    value: ''
   menu_name:
-    value: account
+    value: admin
   link:
-    uri: 'internal:/change-password'
+    uri: 'internal:/admin/update_page_views'
     title: ''
     options: {  }
   external:
@@ -32,9 +35,10 @@
     value: '0'
   expanded:
     value: '0'
-  parent: false
+  parent:
+    value: admin_toolbar_tools.help
   changed:
-    value: '1563280406'
+    value: '1560945229'
   default_langcode:
     value: '1'
   revision_default:
@@ -51,4 +55,59 @@
   content_translation_status:
     value: '1'
   content_translation_created:
-    value: '1563267901'
+    value: '1560945206'
+2:
+  id:
+    value: '2'
+  uuid:
+    value: d376d850-74ad-45ff-bc45-60898a4b44c4
+  revision_id:
+    value: '2'
+  langcode:
+    value: ka
+  bundle:
+    value: menu_link_content
+  revision_created:
+    value: '1563206260'
+  revision_user: false
+  revision_log_message: false
+  enabled:
+    value: '1'
+  title:
+    value: 'GED Transactions'
+  description: false
+  menu_name:
+    value: admin
+  link:
+    uri: 'internal:/admin/ged-transaction'
+    title: ''
+    options: {  }
+  external:
+    value: '0'
+  rediscover:
+    value: '1'
+  weight:
+    value: '2'
+  expanded:
+    value: '0'
+  parent:
+    value: system.admin
+  changed:
+    value: '1563206338'
+  default_langcode:
+    value: '1'
+  revision_default:
+    value: '1'
+  revision_translation_affected:
+    value: '1'
+  metatag: false
+  content_translation_source:
+    value: und
+  content_translation_outdated:
+    value: '0'
+  content_translation_uid:
+    target_id: '1'
+  content_translation_status:
+    value: '1'
+  content_translation_created:
+    value: '1563206260'
