--- a/composer.json
+++ b/composer.json
@@ -293,9 +293,11 @@
     "webmozart/path-util": "^2.3"
   },
   "require-dev": {
+    "behat/behat": "^3.5",
     "behat/mink": "~1.7",
     "behat/mink-goutte-driver": "~1.2",
     "drupal/coder": "^8.3",
+    "drupal/drupal-extension": "^3.4",
     "jcalderonzumba/gastonjs": "~1.0.2",
     "jcalderonzumba/mink-phantomjs-driver": "~0.3.1",
     "mikey179/vfsstream": "~1.2",
