361 party list redesign (#375)
* #361 Update config.

* #361 Patch autosubmit time

* #361 Add default image

* #361 Redesign girchi party list

* #361 Fix phpcs bugs

* #361 Fix phpcs bugs

* #361 Fix minor bugs

* #361 Language update

* #361 Fix supporters logic

* #361 Language update

* #361 Fix minor issues

* #361 Fix girchi party list.

* #361 Update config.

* #361 Fix img src in views fields

* #361 Clean up code

--- a/composer.json
+++ b/composer.json
@@ -369,6 +369,9 @@
       },
       "drupal/email_confirmer": {
         "form skip": "https://www.drupal.org/files/issues/2019-04-16/email_confirmer-optionally_skip_confirmation_form-2971857-10.patch"
+      },
+      "drupal/better_exposed_filter": {
+        "auto submit": "patches/auto_submit_time.patch"
       }
     },
     "installer-paths": {
