--- a/config/sync/field.storage.user.field_tel.yml
+++ b/config/sync/field.storage.user.field_tel.yml
@@ -1,5 +1,5 @@
-uuid: 50495c6e-798f-4292-b54d-96c0712dc713
-langcode: en
+uuid: 1333020e-c990-4568-8a57-6e7f450a2859
+langcode: ka
 status: true
 dependencies:
   module:
