--- a/config/sync/core.entity_form_display.user.user.supporters_registration.yml
+++ b/config/sync/core.entity_form_display.user.user.supporters_registration.yml
@@ -11,15 +11,15 @@ dependencies:
     - field.field.user.user.field_last_name
     - field.field.user.user.field_my_party_list
     - field.field.user.user.field_personal_id
-    - field.field.user.user.field_phone
     - field.field.user.user.field_politician
     - field.field.user.user.field_rank
     - field.field.user.user.field_rating_in_party_list
     - field.field.user.user.field_referral
+    - field.field.user.user.field_referral_url
+    - field.field.user.user.field_tel
     - field.field.user.user.user_picture
   module:
     - datetime
-    - telephone
     - user
 _core:
   default_config_hash: K-1rBM8mTIkFp9RqOC2tMRUukOQ1xbRCfSKK8dEddnA
@@ -70,13 +70,6 @@ content:
     third_party_settings: {  }
     type: string_textfield
     region: content
-  field_phone:
-    weight: 4
-    settings:
-      placeholder: ''
-    third_party_settings: {  }
-    type: telephone_default
-    region: content
   field_referral:
     type: entity_reference_autocomplete
     weight: 0
@@ -107,6 +100,7 @@ hidden:
   field_referral_url: true
   field_social_auth_password: true
   field_twitter_url: true
+  field_tel: true
   google_analytics: true
   langcode: true
   language: true
