sync prod config

--- a/config/sync/om_site_settings.site_settings.yml
+++ b/config/sync/om_site_settings.site_settings.yml
@@ -7,7 +7,7 @@ footer_text: ''
 langcode: en
 _core:
   default_config_hash: NkdNpcz0u9s1KM7wnP-gPGF_HA8Yz_hZhCXkWOeroNQ
-contact_info_phone: ''
+contact_info_phone: '598180025'
 contact_info_email: INFO@GIRCHI.COM
 social_media_facebook: 'https://www.facebook.com/GirchiParty/'
 social_media_twitter: 'https://twitter.com/GirchiParty'
