--- a/web/modules/custom/girchi_ged_transactions/girchi_ged_transactions.services.yml
+++ b/web/modules/custom/girchi_ged_transactions/girchi_ged_transactions.services.yml
@@ -1,3 +1,6 @@
 services:
   girchi_ged_transactions.ged_agregator_service:
     class: Drupal\girchi_ged_transactions\GedAgregatorService
+  girchi_ged_transactions.summarygedcalculation:
+    class: Drupal\girchi_ged_transactions\SummaryGedCalculationService
+    arguments: ['@entity_type.manager','@logger.factory']
