--- a/composer.json
+++ b/composer.json
@@ -235,6 +235,7 @@
     "drupal/image_formatter_link_to_image_style": "^1.0",
     "drupal/inline_entity_form": "^1.0@beta",
     "drupal/jquery_colorpicker": "^1.3",
+    "drupal/jsonapi_extras": "^3.12",
     "drupal/linkit": "^4.3",
     "drupal/mailchimp": "^1.7",
     "drupal/masquerade": "^2.0@beta",
