--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -56,6 +56,8 @@ module:
   help: 0
   hierarchical_term_formatter: 0
   image: 0
+  jsonapi: 0
+  jsonapi_extras: 0
   language: 0
   layout_discovery: 0
   link: 0
