--- a/config/sync/core.menu.static_menu_link_overrides.yml
+++ b/config/sync/core.menu.static_menu_link_overrides.yml
@@ -1,10 +1,10 @@
 definitions:
   contact__site_page:
-    weight: -50
+    enabled: false
     menu_name: footer
     parent: ''
-    enabled: true
     expanded: false
+    weight: -50
   node__add_page:
     weight: 1
     menu_name: admin
@@ -132,11 +132,11 @@ definitions:
     enabled: true
     expanded: false
   user__logout:
-    weight: -45
+    weight: -43
     menu_name: account
     parent: ''
-    expanded: false
     enabled: true
+    expanded: false
 _core:
   default_config_hash: jdY7AU0tU-QsjmiOw3W8vwpYMb-By--_MSFgbqKUTYM
 langcode: ka
