--- a/config/sync/core.entity_view_display.node.article.default.yml
+++ b/config/sync/core.entity_view_display.node.article.default.yml
@@ -4,10 +4,15 @@ status: true
 dependencies:
   config:
     - field.field.node.article.body
+    - field.field.node.article.field_author
     - field.field.node.article.field_category
     - field.field.node.article.field_comments
+    - field.field.node.article.field_favorite_news
+    - field.field.node.article.field_featured_on_slider
     - field.field.node.article.field_image
     - field.field.node.article.field_is_video
+    - field.field.node.article.field_meta_tags
+    - field.field.node.article.field_published_date
     - field.field.node.article.field_show_internal_image
     - field.field.node.article.field_tags
     - field.field.node.article.field_video_url
@@ -94,5 +99,8 @@ hidden:
   field_author: true
   field_comments: true
   field_favorite_news: true
+  field_featured_on_slider: true
+  field_meta_tags: true
+  field_published_date: true
   langcode: true
   search_api_excerpt: true
