--- a/composer.json
+++ b/composer.json
@@ -290,6 +290,7 @@
     "eyecon/colorpicker": "^1.0",
     "google/apiclient": "^2.0",
     "harvesthq/chosen": "1.8.7",
+    "nesbot/carbon": "^2.24",
     "nicolab/php-ftp-client": "^1.4",
     "symfony/dotenv": "^4.3",
     "wearede/tbcpay-php": "^0.9.3",
@@ -383,7 +384,7 @@
         "remove reset route": "patches/change_pwd_page.patch"
       },
       "wearede/tbcpay-php": {
-        "fix old url": "patches/plug_and_pay_url.patch"
+        "Fix url and add card save": "patches/plug_and_pay_url.patch"
       }
     },
     "installer-paths": {
