--- a/web/modules/custom/girchi_donations/girchi_donations.links.menu.yml
+++ b/web/modules/custom/girchi_donations/girchi_donations.links.menu.yml
@@ -1,14 +1,11 @@
-
-## Donation menu items definition
-#entity.donation.collection:
-#  title: 'Donation list'
-#  route_name: entity.donation.collection
-#  description: 'List Donation entities'
-#  parent: system.admin_structure
-#  weight: 100
-
 donation.admin.structure.settings:
   title: 'Donation settings'
   description: 'Configure Donation entities'
   route_name: donation.settings
+  parent: system.admin_structure
+
+regular_donation.admin.structure.settings:
+  title: 'Regular donation settings'
+  description: 'Configure Regular donation entities'
+  route_name: regular_donation.settings
   parent: system.admin_structure
