--- a/config/sync/core.entity_view_display.node.article.slider.yml
+++ b/config/sync/core.entity_view_display.node.article.slider.yml
@@ -83,6 +83,7 @@ hidden:
   field_author: true
   field_comments: true
   field_favorite_news: true
+  field_meta_tags: true
   field_show_internal_image: true
   langcode: true
   search_api_excerpt: true
