--- a/config/sync/core.entity_view_display.node.article.default.yml
+++ b/config/sync/core.entity_view_display.node.article.default.yml
@@ -94,5 +94,6 @@ hidden:
   field_author: true
   field_comments: true
   field_favorite_news: true
+  field_meta_tags: true
   langcode: true
   search_api_excerpt: true
