#496 Fix pager for ged transactions view.

--- a/config/sync/views.view.ged_transaction.yml
+++ b/config/sync/views.view.ged_transaction.yml
@@ -76,7 +76,7 @@ display:
           tags:
             previous: ‹‹
             next: ››
-            first: '« First'
+            first: '1'
             last: 'Last »'
           expose:
             items_per_page: false
