--- a/config/sync/views.view.donations.yml
+++ b/config/sync/views.view.donations.yml
@@ -2,11 +2,10 @@ uuid: 3c806d47-8682-4ad5-a993-da446edcedaf
 langcode: en
 status: true
 dependencies:
-  config:
-    - user.role.administrator
   module:
     - better_exposed_filters
     - girchi_donations
+    - girchi_ged_transactions
     - rest
     - serialization
     - user
@@ -28,10 +27,9 @@ display:
     position: 0
     display_options:
       access:
-        type: role
+        type: perm
         options:
-          role:
-            administrator: administrator
+          perm: 'administer donation entities'
       cache:
         type: tag
         options: {  }
@@ -541,6 +539,72 @@ display:
           entity_type: donation
           entity_field: created
           plugin_id: field
+        ged_amount:
+          id: ged_amount
+          table: ged_transaction_field_data
+          field: ged_amount
+          relationship: field_ged_transaction
+          group_type: group
+          admin_label: ''
+          label: 'Ged-ების რაოდენობა'
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: true
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: number_integer
+          settings:
+            thousand_separator: ''
+            prefix_suffix: true
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          entity_type: ged_transaction
+          entity_field: ged_amount
+          plugin_id: field
       filters:
         politician_donation:
           id: politician_donation
@@ -753,7 +817,16 @@ display:
       header: {  }
       footer: {  }
       empty: {  }
-      relationships: {  }
+      relationships:
+        field_ged_transaction:
+          id: field_ged_transaction
+          table: donation__field_ged_transaction
+          field: field_ged_transaction
+          relationship: none
+          group_type: group
+          admin_label: 'field_ged_transaction: GED transaction'
+          required: false
+          plugin_id: standard
       arguments: {  }
       display_extenders: {  }
     cache_metadata:
@@ -763,7 +836,7 @@ display:
         - 'languages:language_interface'
         - url
         - url.query_args
-        - user.roles
+        - user.permissions
       tags: {  }
   data_export_1:
     display_plugin: data_export
@@ -836,5 +909,5 @@ display:
         - 'languages:language_interface'
         - url
         - url.query_args
-        - user.roles
+        - user.permissions
       tags: {  }
