--- a/config/sync/field.field.donation.donation.field_donation_type.yml
+++ b/config/sync/field.field.donation.donation.field_donation_type.yml
@@ -16,7 +16,7 @@ required: false
 translatable: false
 default_value:
   -
-    value: Disposable
+    value: BASIC
 default_value_callback: ''
 settings: {  }
 field_type: string
