#499 Manage regular donations.

--- a/web/modules/custom/girchi_donations/girchi_donations.routing.yml
+++ b/web/modules/custom/girchi_donations/girchi_donations.routing.yml
@@ -22,3 +22,27 @@ girchi_donations.donations_controller_fail:
     _title: 'Donation finish'
   requirements:
     _permission: 'access content'
+
+girchi_donations.regular_donations:
+  path: '/regular-donations'
+  defaults:
+    _controller: '\Drupal\girchi_donations\Controller\DonationsController::regularDonations'
+    _title: 'Automatic payments'
+  requirements:
+    _permission: 'access content'
+
+girchi_donations.update_donation_status:
+  path: 'donate/update_donation_status'
+  defaults:
+    _controller: '\Drupal\girchi_donations\Controller\DonationsController::updateDonationStatus'
+    _title: 'Update donation status'
+  requirements:
+    _permission: 'access content'
+
+girchi_donations.edit_donation:
+  path: 'donate/edit_donation'
+  defaults:
+    _controller: '\Drupal\girchi_donations\Controller\DonationsController::editDonation'
+    _title: 'Update donation status'
+  requirements:
+    _permission: 'access content'
