--- a/web/modules/custom/om_tbc_payments/om_tbc_payments.routing.yml
+++ b/web/modules/custom/om_tbc_payments/om_tbc_payments.routing.yml
@@ -5,4 +5,6 @@ om_tbc_payments.payment_controller_prepare:
     _title: 'Prepare'
   requirements:
     _permission: 'access content'
+  options:
+    no_cache: 'TRUE'
 #    _role: 'authenticated'
