--- a/config/sync/core.entity_view_display.regular_donation.regular_donation.default.yml
+++ b/config/sync/core.entity_view_display.regular_donation.regular_donation.default.yml
@@ -1,16 +1,16 @@
-uuid: a410b2f5-5279-44f6-ad3e-f957c8d2748b
-langcode: en
+uuid: 794533e7-b753-49cf-8057-4c6519850bd5
+langcode: ka
 status: true
 dependencies:
   config:
-    - field.field.donation.donation.field_donation_type
-    - field.field.donation.donation.field_regular_donation
+    - field.field.regular_donation.regular_donation.field_donations
   module:
+    - datetime
     - girchi_donations
     - user
-id: donation.donation.default
-targetEntityType: donation
-bundle: donation
+id: regular_donation.regular_donation.default
+targetEntityType: regular_donation
+bundle: regular_donation
 mode: default
 content:
   aim_id:
@@ -20,22 +20,23 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
-  field_donation_type:
-    weight: 1
-    label: above
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
-    region: content
-  field_regular_donation:
-    weight: 2
+  field_donations:
+    weight: 15
     label: above
     settings:
       link: true
     third_party_settings: {  }
     type: entity_reference_label
     region: content
+  next_payment_date:
+    label: above
+    type: datetime_default
+    settings:
+      format_type: medium
+      timezone_override: ''
+    weight: 14
+    region: content
+    third_party_settings: {  }
   politician_id:
     label: hidden
     type: author
