--- a/config/sync/metatag.metatag_defaults.front.yml
+++ b/config/sync/metatag.metatag_defaults.front.yml
@@ -7,8 +7,8 @@ _core:
 id: front
 label: 'Front page'
 tags:
-  description: 'გირჩი - ახალი ამბები. დააგროვე GeD-ები და მიიღე მონაწილეობა პარტიის მართვაში. girchi tv'
+  description: 'ახალი ამბები - გირჩი. დააგროვე GeD-ები და მიიღე მონაწილეობა პარტიის მართვაში. girchi tv'
   keywords: 'გირჩი, ახალი ამბები, პოლიტიკა, არჩევნები, ტელევიზია, სკოლა, girchi, საქართველოს ისტორია, აზრით, გირჩის, პროცესი'
-  title: 'გირჩი | Girchi - ახალი ამბები და პარტიის მართვა'
+  title: 'ახალი ამბები და პარტიის მართვა - გირჩი | Girchi'
   shortlink: '[site:url]'
   canonical_url: '[site:url]'
