--- a/environments/settings.develop.php.dist
+++ b/environments/settings.develop.php.dist
@@ -142,6 +142,7 @@ $databases['default']['default'] = array (
  */
 $settings['trusted_host_patterns'][] = '^localhost$';
 $settings['trusted_host_patterns'][] = '^.+\.localhost$';
+$settings['trusted_host_patterns'][] = '^girchi\.docker\.remote$';
 $settings['trusted_host_patterns'][] = '^.+\.omedialab\.com$';
 $settings['trusted_host_patterns'][] = '^.+\.girchi\.com$';
 $settings['trusted_host_patterns'][] = '^girchi_nginx';
