--- a/config/sync/core.entity_view_display.donation.donation.default.yml
+++ b/config/sync/core.entity_view_display.donation.donation.default.yml
@@ -19,41 +19,42 @@ content:
     type: author
     weight: 0
     region: content
-    settings: {}
-    third_party_settings: {}
+    settings: {  }
+    third_party_settings: {  }
   field_donation_type:
     weight: 1
     label: above
     settings:
       link_to_entity: false
-    third_party_settings: {}
+    third_party_settings: {  }
     type: string
     region: content
-  field_regular_donation:
-    weight: 2
-    label: above
-    settings:
   field_ged_transaction:
     weight: 1
     label: above
     settings:
       link: true
-    third_party_settings: {}
+    third_party_settings: {  }
     type: entity_reference_label
+    region: content
+  field_regular_donation:
+    weight: 2
+    label: above
+    settings: null
     region: content
   politician_id:
     label: hidden
     type: author
     weight: 0
     region: content
-    settings: {}
-    third_party_settings: {}
+    settings: {  }
+    third_party_settings: {  }
   user_id:
     label: hidden
     type: author
     weight: 0
     region: content
-    settings: {}
-    third_party_settings: {}
+    settings: {  }
+    third_party_settings: {  }
 hidden:
   search_api_excerpt: true
