--- a/config/sync/views.view.donations.yml
+++ b/config/sync/views.view.donations.yml
@@ -2,6 +2,9 @@ uuid: 3c806d47-8682-4ad5-a993-da446edcedaf
 langcode: en
 status: true
 dependencies:
+  config:
+    - field.storage.donation.field_donation_type
+    - user.role.authenticated
   module:
     - better_exposed_filters
     - girchi_donations
@@ -554,7 +557,7 @@ display:
           relationship: field_ged_transaction
           group_type: group
           admin_label: ''
-          label: 'Ged-ების რაოდენობა'
+          label: 'Amount of GeD'
           exclude: false
           alter:
             alter_text: false
@@ -844,7 +847,7 @@ display:
         - 'languages:language_interface'
         - url
         - url.query_args
-        - user.roles
+        - user.permissions
       tags:
         - 'config:field.storage.donation.field_donation_type'
   data_export_1:
@@ -939,7 +942,7 @@ display:
         - 'languages:language_interface'
         - url
         - url.query_args
-        - user.roles
+        - user.permissions
       tags:
         - 'config:field.storage.donation.field_donation_type'
   page_2:
@@ -1275,7 +1278,7 @@ display:
           relationship: none
           group_type: group
           admin_label: ''
-          label: 'ID of aim politician'
+          label: Politician/Aim
           exclude: false
           alter:
             alter_text: false
@@ -1343,8 +1346,8 @@ display:
           label: 'Donation type'
           exclude: false
           alter:
-            alter_text: false
-            text: ''
+            alter_text: true
+            text: '{{field_donation_type ? field_donation_type : ''Disposable''|t}}'
             make_link: false
             path: ''
             absolute: false
@@ -1460,6 +1463,72 @@ display:
           field_api_classes: false
           entity_type: donation
           entity_field: status
+          plugin_id: field
+        ged_amount:
+          id: ged_amount
+          table: ged_transaction_field_data
+          field: ged_amount
+          relationship: field_ged_transaction
+          group_type: group
+          admin_label: ''
+          label: 'Amount of GeD'
+          exclude: false
+          alter:
+            alter_text: true
+            text: '<i class="icon-ged font-size-3"></i>{{ged_amount}}'
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: true
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: number_integer
+          settings:
+            thousand_separator: ' '
+            prefix_suffix: true
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          entity_type: ged_transaction
+          entity_field: ged_amount
           plugin_id: field
       arguments:
         user_id:
